@@ -25,6 +25,8 @@ Desktop application starter.
 .\mvnw clean install
 ```
 
+When you use the Maven wrapper from this repository, native access for SQLite is enabled automatically, so Java 25+ does not print the `System::load` warning for normal Maven-based runs.
+
 ## Most common Windows release command
 
 If you just want to build the desktop app and create the portable Windows package, run this from the repository root:
@@ -69,11 +71,23 @@ Examples:
 - You can limit dynamic scraping with the `scraper.dynamicTranslations` JVM system property.
 - Available dynamic translation ids:
   - `efo` (`https://www.bible.com/bible/198/GEN.1.EFO`)
+- The `efo` scraper now uses a local **Google Chrome** browser window because bible.com serves a JavaScript client-challenge page to raw HTTP requests.
+- For normal local use, leave the browser in its default visible mode. Optional headless mode is available through `-Dscraper.dynamicBrowserHeadless=true`, but the visible browser is the safer default for this site.
+- If a dynamic run fails late, you can resume from a specific chapter URL with `-Dscraper.dynamicStartUrl=...`.
+- `scraper.dynamicStartUrl` should be used only when exactly one dynamic scraper is selected.
+- If a scraper run fails after collecting some verses, the already collected verses are written to SQLite automatically as a fallback before the failure is reported.
+- When you run the scraper through `mvnw`, the required SQLite native-access flag is already enabled automatically.
 
 Examples:
 
 ```powershell
 .\mvnw -pl scraper exec:java -Dscraper.staticScrapingEnabled=false -Dscraper.dynamicTranslations=efo
+```
+
+Resume EFO from a later chapter, for example Dániel 12:
+
+```powershell
+.\mvnw -pl scraper "-Dscraper.staticScrapingEnabled=false" "-Dscraper.dynamicTranslations=efo" "-Dscraper.dynamicStartUrl=https://www.bible.com/bible/198/DAN.12.EFO" exec:java
 ```
 
 ```powershell
@@ -88,6 +102,14 @@ Examples:
 
 On first start, new users can click the `Útmutató` button in the top-right area of the app for a short quick-start guide.
 
+When you run the desktop app through `mvnw` or through the packaged Windows app-image, the required SQLite native-access flag is already enabled automatically.
+
+If you create a plain IntelliJ `Application` run configuration or run the packaged JAR manually with `java -jar`, add this VM option yourself:
+
+```text
+--enable-native-access=ALL-UNNAMED
+```
+
 ## Build and run the packaged desktop app JAR
 
 ```powershell
@@ -101,7 +123,11 @@ java -jar .\app\target\app-<version>.jar
 
 ## Default SQLite database location
 
-- By default, both modules now use a shared SQLite file at `${user.home}/bible-verses.db`.
+- By default, local development now uses a shared SQLite file at `app\data\bible-verses.db` inside the repository.
+- This keeps the generated database next to the desktop app module, so the Windows packaging step can bundle it automatically.
+- The database content is safe to keep in the repository: it stores Bible verses plus the app's last opened verse-range selections, not passwords, API keys, or machine-specific paths.
+- Because the desktop app can save the last opened selection into the same SQLite file, `app\data\bible-verses.db` may sometimes show up as modified after you use the app locally.
+- If the repository root cannot be detected, both modules fall back to `${user.home}/bible-verses.db`.
 - You can override the desktop app path with the `BIBLE_VERSE_DB_PATH` environment variable.
 - You can override the scraper output path with the `scraper.outputDatabasePath` JVM system property.
 
@@ -135,9 +161,23 @@ What the script does:
 - builds the `app` module
 - finds the freshly packaged app JAR automatically
 - creates a clean temporary `jpackage` input folder
+- copies the SQLite database into the packaged app automatically
 - creates a portable Windows `app-image`
 - uses `app\src\main\resources\bible-verse-app-icon.ico` automatically if that file exists
 - creates a ZIP archive next to the packaged folder
+
+By default the script looks for the database here, in this order:
+
+- `app\data\bible-verses.db`
+- `${user.home}\bible-verses.db` (legacy fallback)
+
+If needed, you can point the script at a specific database file:
+
+```powershell
+powershell -ExecutionPolicy Bypass -File .\build-windows-package.ps1 -DatabasePath .\some\other\folder\bible-verses.db
+```
+
+The packaged launcher is configured automatically to use the bundled database copy under `app\data\bible-verses.db` inside the portable app-image.
 
 Optional:
 
@@ -162,6 +202,22 @@ Important:
   - the packaged app files under `app/`
 - this folder is the real deliverable; you can zip it and copy it to another Windows machine
 - this portable flow does **not** require WiX Toolset
+
+### For end users: how to use the ZIP package
+
+If someone receives `Bible Verse Extractor-portable.zip`, they should do this:
+
+1. Copy the ZIP file to any folder where they want to keep the app.
+2. Right-click the ZIP file and choose **Extract All...**
+3. Open the extracted `Bible Verse Extractor` folder.
+4. Double-click `Bible Verse Extractor.exe` to start the app.
+
+Important for non-technical users:
+
+- Do **not** run the app from inside the ZIP preview window. Extract it first.
+- Keep the whole extracted `Bible Verse Extractor` folder together. The `.exe`, the `runtime` folder, and the `app` folder belong together.
+- The bundled Java runtime is already included, so no separate Java installation is needed on the target Windows machine.
+- If desired, create a desktop shortcut to `Bible Verse Extractor.exe` after extraction.
 
 ### Step-by-step: create a portable EXE + ZIP from a fresh project state
 
@@ -198,6 +254,8 @@ If Spring Boot also creates `app-<version>.jar.original`, use the plain `app-<ve
 Remove-Item -Recurse -Force .\app\dist, .\app\target\jpackage-input -ErrorAction SilentlyContinue
 New-Item -ItemType Directory .\app\target\jpackage-input | Out-Null
 Copy-Item .\app\target\app-<version>.jar .\app\target\jpackage-input\
+New-Item -ItemType Directory .\app\target\jpackage-input\data | Out-Null
+Copy-Item .\app\data\bible-verses.db .\app\target\jpackage-input\data\
 ```
 
 #### 4. Create the portable Windows app-image
@@ -205,13 +263,13 @@ Copy-Item .\app\target\app-<version>.jar .\app\target\jpackage-input\
 Basic command:
 
 ```powershell
-jpackage --type app-image --name "Bible Verse Extractor" --input ".\app\target\jpackage-input" --main-jar "app-<version>.jar" --dest ".\app\dist" --app-version <numeric-version> --vendor "Bible Verse Tool"
+jpackage --type app-image --name "Bible Verse Extractor" --input ".\app\target\jpackage-input" --main-jar "app-<version>.jar" --dest ".\app\dist" --app-version <numeric-version> --vendor "Bible Verse Tool" --java-options "-Dapp.database.path=$APPDIR\data\bible-verses.db"
 ```
 
 If you later add a Windows `.ico` file, you can include it like this:
 
 ```powershell
-jpackage --type app-image --name "Bible Verse Extractor" --input ".\app\target\jpackage-input" --main-jar "app-<version>.jar" --dest ".\app\dist" --app-version <numeric-version> --vendor "Bible Verse Tool" --icon ".\app\src\main\resources\bible-verse-app-icon.ico"
+jpackage --type app-image --name "Bible Verse Extractor" --input ".\app\target\jpackage-input" --main-jar "app-<version>.jar" --dest ".\app\dist" --app-version <numeric-version> --vendor "Bible Verse Tool" --java-options "-Dapp.database.path=$APPDIR\data\bible-verses.db" --icon ".\app\src\main\resources\bible-verse-app-icon.ico"
 ```
 
 #### 5. Find the portable EXE
